<resources>
    <string name="app_name">HelloSigns</string>
    <string name="bouton_tuto">Leçons</string>
    <string name="boutin_quiz">Quiz</string>
    <string name="drawer_tittle">HelloSigns</string>
    <string name="dictionary">Dictionnaire</string>
    <string name="lessons">Leçons</string>
    <string name="parametre">Parametres</string>
    <string name="str_next">Suivant</string>
    <string name="home">Menu Principal</string>

    <string name="action_sign_in_short">S\'enregistrer</string>
    <string name="email">Email</string>
    <string name="minimum_password">Mot de passe trop court, veuillez mettre un mot de passe de 6 caractères minimum</string>
    <string name="auth_failed">Erreur, veuillez réessayer</string>
    <string name="change_email">Modifier Email</string>
    <string name="change_password">Modifier mot de passe</string>
    <string name="send_password_reset_email">Envoyer un mail de réinitialisation </string>
    <string name="remove_user">supprimer compte</string>
    <string name="new_pass">Nouveau mot de passe </string>
    <string name="title_activity_profile">BDD</string>
    <string name="title_activity_login">Connexion</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">mot de passe</string>
    <string name="hint_name">Identifiant</string>
    <string name="btn_login">Identification</string>
    <string name="prompt_password">Entrez votre mot de passe svp</string>
    <string name="btn_link_to_register">Pas encore membre? Enregistrez vous maintenant!</string>
    <string name="btn_link_to_login">Vous êtes déjà enregistré</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Mot de passe oublié?</string>
    <string name="btn_reset_password">réinitialiser mot de passe</string>
    <string name="btn_back"><![CDATA[ Retour]]></string>
    <string name="hint_new_email">Nouveau Email</string>
    <string name="btn_change">Modifier</string>
    <string name="btn_send">Envoyer</string>
    <string name="btn_remove">Supprimer</string>
    <string name="btn_sign_out">Déconnexion</string>
    <string name="lbl_forgot_password">Mot de passe oublié?</string>
    <string name="forgot_password_msg">Nous avons besoin de votre ID pour la procédure </string>
    <string name="email_id">Email ID</string>

    <string name="avatar">avatar</string>
    <string name="Name">Nom</string>
    <string name="Job">Métier</string>
    <string name="btn_Message">Message</string>
    <string name="btn_friends">Amis</string>
    <string name="title">Modification du profil</string>
    <string name="Rename">Nom</string>
    <string name="Rejob">Métier</string>
    <string name="btn_save">Enregistrer</string>
    <string name="description">Introduction</string>
    <string name="setting_account">Paramètre du compte</string>
    <string name="go_app">Retour vers l\'application</string>
    <string name="resume">Description de votre profil</string>
    <string name="prenom">Prenom</string>
    <string name="pays">Pays</string>
    <string name="introduction">Introduction</string>
    <string name="content">Content</string>
    <string name="d_connection">Déconnexion</string>

    <string name="tuto_alphabet">L\'Alphabet</string>
    <string name="tuto_presenter">Se Présenter</string>
    <string name="tuto_saison">Les Saisons</string>
    <string name="tuto_compter">Compter</string>

    <string name="edit_message">Enter a message</string>
    <string name="button_send">send</string>
    <string name="button_quizs">Quizs</string>
    <string name="button_tutos">Tutoriels</string>
    <string name="test">Test</string>
    <string name="test2">Test2</string>
    <string name="test3s">Test3s</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_result">Results!!!</string>
    <string name="title_activity_navigation_drawer">navigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="about_text">
  <![CDATA[
    Author: Your name<br/><br/>Your description text, changelog, licences etc... ]]>
</string>
    <string name="you_can_spell_check_very_long_text_areas_without_compromising_any_performance_hits_regardless_of_the_size_of_the_text_ultimatespell_only_sends_small_portions_of_the_text_to_the_server_as_needed_while_the_user_spell_checks_through_the_text_basically_the_spell_check_dialog_box_makes_on_demand_calls_to_a_callback_page_on_the_server_without_refreshing_the_whole_page_or_dialog_it_keeps_processing_small_blocks_of_text_using_the_ajax_asynchronous_javascript_and_xml_techniques_note_that_ultimatespell_displays_the_text_in_the_dialog_box_sentence_by_sentence_just_like_microsoft_word_this_helps_the_user_understand_the_actual_context_in_which_the_spelling_error_occurs">You can spell check very long text areas without compromising any performance hits. Regardless of the size of the text, UltimateSpell only sends small portions of the text to the server as needed, while the user spell checks through the text. Basically the spell check dialog box makes on-demand calls to a callback page on the server without refreshing the whole page or dialog. It keeps processing small blocks of text using the AJAX (Asynchronous JavaScript and XML) techniques. Note that UltimateSpell displays the text in the dialog box sentence-by-sentence just like Microsoft Word. This helps the user understand the actual context in which the spelling error occurs.</string>
    <string name="compter">Compter</string>
    <string name="Family">La famille</string>
    <string name="time">L\'heure</string>
</resources>
