<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:ignore="ExtraText"

    >
    <group android:checkableBehavior="single">

        <item android:id="@+id/home"
            android:icon="@drawable/home"
            android:title="@string/home" />
        <item
            android:id="@+id/lessons"
            android:icon="@drawable/lessons"
            android:title="@string/lessons"
            app:showAsAction="always"
            />
        <item
            android:id="@+id/quizzes"
            android:icon="@drawable/quizzes"
            android:title="@string/boutin_quiz"
            app:showAsAction="always"
            />
        <item android:id="@+id/dictionary"
            android:icon="@drawable/dictionary"
            android:title="@string/dictionary" />
        <item
            android:id="@+id/parametre"
            android:icon="@drawable/parametre"
            android:title="@string/parametre"
            app:showAsAction="always" />

        <item
            android:id="@+id/deconnection"
            android:icon="@drawable/deconnection"
            android:title="@string/d_connection"
            app:showAsAction="always" />

    </group>
</menu>