<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:background="@drawable/back"
        >

        <RelativeLayout
            android:id="@+id/part1"
            android:layout_width="match_parent"
            android:layout_height="738dp"
            android:layout_weight="1">


            <Button
                android:id="@+id/handle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/ic_handle" />

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/avatar"
                android:src="@drawable/avatar1" />

            <Button
                android:id="@+id/btn_choose"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignBottom="@+id/avatar"
                android:layout_alignEnd="@+id/avatar"
                android:layout_alignRight="@+id/avatar"
                android:background="@drawable/ic_settings_black_24dp" />

            <TextView
                android:id="@+id/name"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/handle"
                android:layout_marginEnd="68dp"
                android:text="@string/Name"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_alignParentRight="true"
                android:layout_marginRight="68dp" />

            <TextView
                android:id="@+id/prenom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/pays"
                android:layout_below="@+id/handle"
                android:text="@string/prenom"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_alignRight="@+id/pays" />

            <TextView
                android:id="@+id/pays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/job"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/job"
                android:layout_marginTop="80dp"
                android:text="@string/pays"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/job"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/avatar"
                android:layout_toLeftOf="@+id/name"
                android:layout_toStartOf="@+id/name"
                android:text="@string/Job"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/avatar"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/avatar"
                android:layout_marginTop="157dp"
                android:text="@string/introduction"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/line3"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/description"
                android:background="@color/white" />

            <TextView
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/description"
                android:text="@string/content"
                android:textColor="@color/white"
                android:textSize="19sp"
                android:textStyle="normal" />

            <View
                android:id="@+id/line4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/content"
                android:background="@color/white" />

            <Button
                android:id="@+id/btn_message"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@+id/btn_choose"
                android:background="@drawable/message"
                android:layout_toLeftOf="@+id/btn_choose" />

            <Button
                android:id="@+id/btn_ami"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/prenom"
                android:background="@drawable/contact"
                android:layout_toRightOf="@+id/prenom" />


        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/part2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">


            <View
                android:id="@+id/line1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/line1"
                android:id="@+id/listview"/>
        </RelativeLayout>
    </LinearLayout>

