<?xml version="1.0" encoding="utf-8"?>
<!-- Use DrawerLayout as root container for activity -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@drawable/back"
        tools:context="com.example.charl.charleshellosigns.Tutorials.TutosActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/main_menu_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

        <TextView
            android:id="@+id/theTutoriels"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="45dp"
            android:text="Tutoriels" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/basicbutton"
            android:drawableLeft="@drawable/compter_img"
            android:drawablePadding="180sp"
            android:drawableStart="@drawable/compter_img"
            android:onClick="goToCounting"
            android:text="@string/tuto_compter"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_alignParentLeft="true" />

        <Button
            android:id="@+id/button7"
            android:drawableLeft="@drawable/heure_img"
            android:drawablePadding="200sp"
            android:drawableStart="@drawable/heure_img"
            android:layout_centerHorizontal="true"
            android:onClick="goToTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/button4"
            android:layout_marginTop="20dp"
            android:background="@drawable/basicbutton"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/time"/>

        <Button
            android:id="@+id/button8"

            android:drawableLeft="@drawable/famille_img"
            android:drawablePadding="180sp"
            android:drawableStart="@drawable/famille_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/Family"
            android:onClick="goToFamily"
            android:layout_below="@+id/button7"
            android:background="@drawable/basicbutton"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="20dp"/>

        <Button
        android:id="@+id/button9"
        android:drawableLeft="@drawable/se_presenterbouton"
        android:drawablePadding="150sp"
        android:drawableStart="@drawable/se_presenterbouton"
        android:onClick="goToIntroduce"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tuto_presenter"
        android:layout_below="@+id/button8"
        android:background="@drawable/basicbutton"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>


    </LinearLayout>
    <!-- Container for contents of drawer - use NavigationView to make configuration easier -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/main_menu"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>
